Tue Jun 24 06:17:52 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* eval.c (setup_exception): "mesg == sysstack_error" and
	  sysstack_error_p(mesg) are duplicated.
	  r46502 seems to want to use latter.

Tue Jun 24 06:15:36 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/tk/tcltklib.c: fix format specifiers for VALUE and
	  Tcl_Interp*.  [ruby-core:63283] [Bug #9972]

Tue Jun 24 05:40:41 2014  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* nacl/nacl-config.rb: Use File.exist? instead of executable?
	  for irt_core. Recent nacl_sdk has non-executable irt_core.
	  Patch by Shinichiro Hamaji.
	  [Fixes GH-529] https://github.com/ruby/ruby/pull/529

Tue Jun 24 03:52:35 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/mailto.rb: support RFC6068.

Mon Jun 23 18:44:45 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* tool/config_files.rb: rename class ConfigFiles to Downloader.
	* tool/get-config_files: ditto.
	* tool/make-snapshot: ditto.

Mon Jun 23 18:03:13 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* tool/rbinstall.rb: support to install bundle gems.

Mon Jun 23 17:33:11 2014  Akinori MUSHA  <knu@iDaemons.org>

	* lib/net/imap.rb (Net::IMAP#fetch): [DOC] Describe how a range in
	  +set+ is interpreted, and mention -1 which can be used for '*'.

Mon Jun 23 16:22:50 2014  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* include/ruby/ruby.h (struct RHash): no longer. [Feature #9889]

	* include/ruby/ruby.h (RHASH): ditto.

	* include/ruby/ruby.h (RHASH_ITER_LEV): deprecated.  Will be deleted later.

	* include/ruby/ruby.h (RHASH_IFNONE): ditto.

	* internal.h (struct RHash): moved here.

	* internal.h (RHASH): ditto.

	* hash.c (rb_hash_iter_lev): do not use this.

	* hash.c (rb_hash_ifnone): ditto.

Mon Jun 23 13:30:11 2014  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* include/ruby/ruby.h (struct RComplex): no longer. [Feature #9888]

	* include/ruby/ruby.h (RCOMPLEX): ditto.
